--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 </script>
 <script src="/css/OwlCarousel2-2.3.4/dist/owl.carousel.js"></script>
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/styleVoiting.css">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/styleTextPage.css">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/styleSlideShow.css">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/styleMainMenu.css">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/styleHead.css">
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="styleTextPage.css">
+<link rel="stylesheet" type="text/css" href="styleHead.css">
+<link rel="stylesheet" type="text/css" href="styleMainMenu.css">
+<link rel="stylesheet" type="text/css" href="styleSlideShow.css">
 <link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/styleFuter.css">
 <link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/styleCopyRight.css">
 <link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/styleContent.css">
