--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@ for (var i = 0; i < e.length; i++) {document.createElement(e[i]);}
 var currentPage = "covid-validate";
 //console.log('currentPage = ' + ''+currentPage+'; ');
 </script>
-<script src="/Users/Admin/Desktop/Main/js/js#pubid=ra-50e6e58d3512568a.js"></script>
-<script src="/Users/Admin/Desktop/Main/js/jquery-ui.js"></script>
-<script src="/Users/Admin/Desktop/Main/js/jquery-migrate-1.2.1.js"></script>
-<script src="/Users/Admin/Desktop/Main/js/jquery-2.0.3.js"></script>
-<script src="/Users/Admin/Desktop/Main/js/6666666.js"></script>
-<script src="/Users/Admin/Desktop/Main/js/configPage.js"></script>
-<script src="/Users/Admin/Desktop/Main/js/9999999.js"></script>
-<script src="/Users/Admin/Desktop/Main/js/8888888.js"></script>
-<script src="/Users/Admin/Desktop/Main/js/7777777.js"></script>
+<script src="jquery-2.0.3.js"></script>
+<script src="jquery-migrate-1.2.1.js"></script>
+<script src="jquery-ui.js"></script>
+<script src="configPage.js"></script>
+<script src="5555555.js"></script>
+<script src="6666666.js"></script>
+<script src="7777777.js"></script>
+<script src="8888888.js></script>
+<script src="9999999.js"></script>
 <script>$(document).ready(function(){$('a.fancybox').fancybox();});</script>
 <script type="text/javascript">
 var _gaq = _gaq || [];
@@ -37,47 +37,47 @@ ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www')
 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 })();
 </script>
-<script src="/css/OwlCarousel2-2.3.4/dist/owl.carousel.js"></script>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<script src="owl.carousel.js"></script>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" type="text/css" href="styleTextPage.css">
 <link rel="stylesheet" type="text/css" href="styleHead.css">
 <link rel="stylesheet" type="text/css" href="styleMainMenu.css">
 <link rel="stylesheet" type="text/css" href="styleSlideShow.css">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/styleFuter.css">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/styleCopyRight.css">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/styleContent.css">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/style.css">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/MobileLayout.css">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/font-awesome-4.7.css">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/font-awesome-4.7-3.css">
-<link rel="stylesheet" type="text/css" href="/Users/Admin/Desktop/Main/css/font-awesome-4.7-2.css">
-<link rel="stylesheet" href="/Users/Admin/Desktop/Main/css/OwlCarousel2-2.3.4.css">
-<link rel="stylesheet" href="/Users/Admin/Desktop/Main/css/OwlCarousel2-2.3.4-2.css">
+<link rel="stylesheet" type="text/css" href="styleContent.css">
+<link rel="stylesheet" type="text/css" href="styleFuter.css">
+<link rel="stylesheet" type="text/css" href="styleCopyRight.css">
+<link rel="stylesheet" type="text/css" href="styleVoiting.css">
+<link rel="stylesheet" type="text/css" href="MobileLayout.css">
+<link rel="stylesheet" type="text/css" href="font-awesome-4.7.css">
+<link rel="stylesheet" type="text/css" href="font-awesome-4.7-3.css">
+<link rel="stylesheet" type="text/css" href="font-awesome-4.7-2.css">
+<link rel="stylesheet" href="OwlCarousel2-2.3.4.css">
+<link rel="stylesheet" href="OwlCarousel2-2.3.4-2.css">
 
-<link rel="stylesheet" href="/Users/Admin/Desktop/Main/css/fancybox 1.0.2.css" type="text/css" media="screen">
-<link rel="stylesheet" href="/Users/Admin/Desktop/Main/css/fancybox 2.0.6.css" type="text/css" media="screen">
-<link rel="stylesheet" href="/Users/Admin/Desktop/Main/css/fancybox2.0.6.css" type="text/css" media="screen">
+<link rel="stylesheet" href="fancybox 1.0.2.css" type="text/css" media="screen">
+<link rel="stylesheet" href="fancybox 2.0.6.css" type="text/css" media="screen">
+<link rel="stylesheet" href="fancybox2.0.6.css" type="text/css" media="screen">
 </head>
 <body>
 <div class="btnEventScrollTop left" style="display: none">scroll top</div><header>
 	<aside>
-				<a href="/eng/index/" class="linkHomePage">Home page</a>
+				<a href="https://biokurs.com.ua/eng/index/" class="linkHomePage">Home page</a>
 				<div class="userLinks">
 			<div class="socialLink">
 				<a href="skype:tarasbiokurs?call" class="skype">tarasbiokurs</a><a href="https://www.facebook.com/biokursclinic" class="facebook">fb</a><a href="https://twitter.com/UaDoctorhouse" class="twitter">twitter</a><a href="https://dovidnuk.vash.ua/panorama/5141/index.html" class="google">g</a>			</div>
 			<div class="langLink">
-				<a href="/ua/covid-validate/validate/" class="ua ">ua</a>
-				<a href="/eng/covid-validate/validate/" class="en current">en</a>
+				<a href="https://biokurs.com.ua/ua/covid-validate/validate/" class="ua ">ua</a>
+				<a href="https://biokurs.com.ua/eng/covid-validate/validate/">en</a>
 			</div>
 		</div>
 	</aside>
 	<div id="header">
-		<a href="/eng/index/" class="logo">
-			<img src="/img/icon-logo-biokurs.png">
-			<img class="imglogo" src="/img/Logo_Biokurs1.jpg">
+		<a href="https://biokurs.com.ua/eng/index/" class="logo">
+			<img src="icon-logo-biokurs.png>
+			<img class="imglogo" src="Logo_Biokurs1.jpg">
 		</a>
-		<div class="getResults"><a href="/eng/get-result/">How to get the results</a></div>
+		<div class="getResults"><a href="https://biokurs.com.ua/eng/get-result/">How to get the results</a></div>
 		<div class="contacts">
 			<div class="phone">
 				<span class="title">CALL US:</span>
@@ -89,7 +89,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 			</div>
 		</div>
 		<div class="section">
-			<a href="#" class="menu-btn">
+			<a href="https://biokurs.com.ua/eng/covid-validate/?idorder=223862&action=validate#" class="menu-btn">
 				<span></span>
 			</a>
 		</div>
@@ -97,66 +97,66 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 </header><nav>
 	<div class="userLinks">
 		<div class="langLink">
-			<a href="/ua/covid-validate/validate/" class="ua ">ua</a>
-			<a href="/eng/covid-validate/validate/" class="en current">en</a>
+			<a href="https://biokurs.com.ua/ua/covid-validate/validate/" class="ua ">ua</a>
+			<a href="https://biokurs.com.ua/eng/covid-validate/validate/" class="en current">en</a>
 		</div>
 	</div>
 	<ul class="listLevel1">
-		<li class="sub-menu" data-level="true"><a class="list-block_item" href="/eng/about/" class="active"><span>About our clinic</span></a>
+		<li class="sub-menu" data-level="true"><a class="list-block_item" href="https://biokurs.com.ua/eng/about/" class="active"><span>About our clinic</span></a>
 			<div class="listLevel2">
 				<ul>
-					<li><a href="/eng/about/">About our clinic</a></li>
-					<li><a href="/eng/gallery/">Photo Gallery</a></li>
-					<li><a href="/eng/collective/">Our team</a></li>
-					<li><a href="/eng/certificates/">Certificates</a></li>
-					<li><a href="/eng/partners/">Partners</a></li>
-					<li><a href="/eng/news-biokurs/1/">News Biokurs</a></li>
+					<li><a href="https://biokurs.com.ua/eng/about/">About our clinic</a></li>
+					<li><a href="https://biokurs.com.ua/eng/gallery/">Photo Gallery</a></li>
+					<li><a href="https://biokurs.com.ua/eng/collective/">Our team</a></li>
+					<li><a href="https://biokurs.com.ua/eng/certificates/">Certificates</a></li>
+					<li><a href="https://biokurs.com.ua/eng/partners/">Partners</a></li>
+					<li><a href="https://biokurs.com.ua/eng/news-biokurs/1/">News Biokurs</a></li>
 				</ul>
 			</div>
 		</li>
-		<li class="sub-menu" data-level="true"><a class="list-block_item" href="/eng/appointment/" class="active"><span>FOR PATIENTS</span></a>
+		<li class="sub-menu" data-level="true"><a class="list-block_item" href="https://biokurs.com.ua/eng/appointment/" class="active"><span>FOR PATIENTS</span></a>
 			<div class="listLevel2">
 				<ul>
-					<li><a href="/eng/appointment/">Appointment</a></li>
-					<li><a href="/eng/analyzes/">Where to get tested</a></li>
-					<li><a href="/eng/services/">BIOKURS MEDICAL CENTER SERVICES</a></li>
-					<li><a href="/eng/rules/">The rules of providing medical services</a></li>
-					<li><a href="/eng/prepare/">How to get ready for examination</a></li>
-					<li><a href="/eng/actions/">Special offers</a></li>
-					<li><a href="/eng/information/1/">Be healthy!</a></li>
+					<li><a href="https://biokurs.com.ua/eng/appointment/">Appointment</a></li>
+					<li><a href="https://biokurs.com.ua/eng/analyzes/">Where to get tested</a></li>
+					<li><a href="https://biokurs.com.ua/eng/services/">BIOKURS MEDICAL CENTER SERVICES</a></li>
+					<li><a href="https://biokurs.com.ua/eng/rules/">The rules of providing medical services</a></li>
+					<li><a href="https://biokurs.com.ua/eng/prepare/">How to get ready for examination</a></li>
+					<li><a href="https://biokurs.com.ua/eng/actions/">Special offers</a></li>
+					<li><a href="https://biokurs.com.ua/eng/information/1/">Be healthy!</a></li>
 				</ul>
 			</div>
 		</li>
-		<li class="sub-menu" data-level="true"><a class="list-block_item" href="/eng/direct/" class="active"><span>FOR DOCTORS</span></a>
+		<li class="sub-menu" data-level="true"><a class="list-block_item" href="https://biokurs.com.ua/eng/direct/" class="active"><span>FOR DOCTORS</span></a>
 			<div class="listLevel2">
 				<ul>
-					<li><a href="/eng/direct/">Contact us</a></li>
-					<li><a href="/eng/cooperation/">Cooperation</a></li>
-					<li><a href="/eng/news-laboratory/1/">News</a></li>
-					<li><a href="/eng/doc-cabinet/">Doctor cabinet</a></li>
+					<li><a href="https://biokurs.com.ua/eng/direct/">Contact us</a></li>
+					<li><a href="https://biokurs.com.ua/eng/cooperation/">Cooperation</a></li>
+					<li><a href="https://biokurs.com.ua/eng/news-laboratory/1/">News</a></li>
+					<li><a href="https://biokurs.com.ua/eng/doc-cabinet/">Doctor cabinet</a></li>
 				</ul>
 			</div>
 		</li>
-		<li class="sub-menu" data-level="true"><a class="list-block_item" href="/eng/analyzes-result/" ><span>Laboratory</span></a>
+		<li class="sub-menu" data-level="true"><a class="list-block_item" href="https://biokurs.com.ua/eng/analyzes-result/" ><span>Laboratory</span></a>
 			<div class="listLevel2">
 				<ul>
 					<!-- <li><a href="/eng/analyzes-result/">How to get the result</a></li> -->
-					<li><a href="/eng/analyzes-city/">Where to get tested</a></li>
-					<li><a href="/eng/news-laboratory/1/">News</a></li>
+					<li><a href="https://biokurs.com.ua/eng/analyzes-city/">Where to get tested</a></li>
+					<li><a href="https://biokurs.com.ua/eng/news-laboratory/1/">News</a></li>
 
 				</ul>
 			</div>
 		</li>
-		<li class="sub-menu" data-level="true"><a class="list-block_item" href="/eng/price-consulting/" class="active"><span>Services and Prices</span></a>
+		<li class="sub-menu" data-level="true"><a class="list-block_item" href="https://biokurs.com.ua/eng/price-consulting/" class="active"><span>Services and Prices</span></a>
 			<div class="listLevel2">
 				<ul>
-					<li><a href="/eng/price-na-analyzes/">Laboratory tests fees</a></li>
+					<li><a href="https://biokurs.com.ua/eng/price-na-analyzes/">Laboratory tests fees</a></li>
 					<!-- <li><a href="/eng/politics-discounts/">Promotions and discounts</a></li> -->
 				</ul>
 			</div>
 		</li>
 		<li>
-			<a href="/eng/contacts/" >
+			<a href="https://biokurs.com.ua/eng/contacts/" >
 				<span>Contact us</span>
 			</a>
 		</li>
@@ -167,12 +167,12 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <div id="leftPart">
 	
 	<ul class="listNav home">
-		<li class="getResults"><a href="/eng/get-result/">How to get the results</a></li>
-		<li class="address"><a href="/eng/addresses-branches/">Our subsidiaries</a></li>
+		<li class="getResults"><a href="https://biokurs.com.ua/eng/get-result/">How to get the results</a></li>
+		<li class="address"><a href="https://biokurs.com.ua/eng/addresses-branches/">Our subsidiaries</a></li>
 <!--		<li class="testsHome"><a href="/eng/analyzes-home/">Home and office analysis service</a></li> -->
-		<li class="questionsAnswers"><a href="/eng/faq/">FAQ</a></li>
-		<li class="askDoctor"><a href="/eng/ask-doctor/">Ask the doctor</a></li>
-		<li class="jobs"><a href="/eng/jobs/">Jobs</a></li>
+		<li class="questionsAnswers"><a href="https://biokurs.com.ua/eng/faq/">FAQ</a></li>
+		<li class="askDoctor"><a href="https://biokurs.com.ua/eng/ask-doctor/">Ask the doctor</a></li>
+		<li class="jobs"><a href="https://biokurs.com.ua/eng/jobs/">Jobs</a></li>
 		<li class="tur"><a href="https://dovidnuk.vash.ua/panorama/5141/index.html" target="_blank">3D тур</a></li>
 		<!-- <li class="comments"><a href="/eng/reviews/">Reviews</a></li> -->
 	</ul>
