--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
     <a class="addthis_counter addthis_pill_style" style="margin: 0px 0px 0px -10px"></a>
     </div>
     <script type="text/javascript">var addthis_config = {"data_track_addressbar":false};</script>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50e6e58d3512568a"></script>
+    <script type="text/javascript" src="addthis_widget.js#pubid=ra-50e6e58d3512568a.js"></script>
     <!-- AddThis Button END -->
 </div></div>
 </div>
