--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 	</aside>
 	<div id="header">
 		<a href="https://biokurs.com.ua/eng/index/" class="logo">
-			<img src="icon-logo-biokurs.png>
+			<img src="icon-logo-biokurs.png">
 			<img class="imglogo" src="Logo_Biokurs1.jpg">
 		</a>
 		<div class="getResults"><a href="https://biokurs.com.ua/eng/get-result/">How to get the results</a></div>
